Rust introduction part completed 🥈

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 decades by providing safety *and* productivity, speed *and* ergonomics. Give
                 Rust a try and see if its choices work for you.</p>&nbsp;
             </li>
-            <li>Rust Installation</li>
+            <li><h2>Rust Installation</h2></li>
             <li>Hello world program with Rust
                 <pre><code class="language-rust">
                     fn main(){
@@ -99,8 +99,8 @@
                     }
                 </code></pre>
             </li>
-            <li>Hello cargo !</li>
-            <li>Guessing game project</li>
+            <li><h2>Hello cargo!</h2></li>&nbsp;
+            <li><h2>Guessing game project</h2></li>
         </ol>
     </div>
 </body>
