--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 decades by providing safety *and* productivity, speed *and* ergonomics. Give
                 Rust a try and see if its choices work for you.</p>&nbsp;
             </li>
-            <li><h2>Rust Installation</h2></li>
-            <li>Hello world program with Rust
+            <li><h2>Rust Installation</h2></li>&nbsp;
+            <li><h2>Hello world program with Rust</h2>
                 <pre><code class="language-rust">
                     fn main(){
                         println!("Hello, world!");
